<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="700dp"
    android:padding="10dp"
    android:background="@color/black"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/SeacaboTXT"
        android:text="@string/SeacaboTXT"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FF33D7 "
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/HasmatadoTXT"
        android:text="@string/HasmatadoTXT"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FF33D7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/NumeroTXT"
        android:text="@string/NumeroTXT"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FF33D7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    //ANIMACION
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        app:lottie_fileName="finjuego.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <Button
        android:id="@+id/JUGARDENUEVO"
        android:text="@string/JUGARDENUEVO"
        android:background="@drawable/boton_gameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/IRMENU"
        android:text="@string/IRMENU"
        android:background="@drawable/boton_gameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/PUNTAJES"
        android:text="@string/PUNTAJES"
        android:background="@drawable/boton_gameover"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</androidx.appcompat.widget.LinearLayoutCompat>