<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/lugar2"
    tools:context=".EscenarioJuego">

    <!--INFORMACION-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--INFORMACION-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/contador" />


            <!--CONTADOR-->
            <TextView
                android:id="@+id/TvContador"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/TvContador"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <!--NOMBRE DEL JUGADOR-->
            <TextView
                android:id="@+id/TvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/TvNombre"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <!--ANIMACIÓN-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="tiempo.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <!--TIEMPO-->
            <TextView
                android:id="@+id/TvTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/TvTiempo"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!--VIRUS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IvVirus"
                android:layout_width="150sp"
                android:layout_height="150dp"
                android:src="@drawable/virus" />



        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>